<resources>
    <string name="app_name">The Daily Quiz</string>

    <!-- activity_login.xml -->
    <string name="daily_quiz">Daily Quiz</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Do_not_have"> Don\'t have an account? </string>
    <string name="signup">   Sign Up</string>

    <!--activity_sign_up.xml -->
    <string name="Become_a_member">Become a member</string>
    <string name="Type_your_full_name">Type your full name</string>
    <string name="Type_your_email">Type your email</string>
    <string name="Type_your_password">Type your password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="create_an_account">create an account</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="Sign_In">   Sign In</string>

    <!--fragment_about_us.xml-->
    <string name="about_us_content">This is a quiz game.
        User can customized the quiz. After finishing the quiz, user can gain 1 carrot.
        Accumulating at least 3 carrots, can be used to feed your rabbit. Enjoy playing
        and have fun!</string>
    <string name="cancel">Cancel</string>

    <!--fragment_home.xml -->
    <string name="total_carrot">Total carrot:  </string>
    <string name="feed">Feed</string>
    <string name="start_quiz">Start quiz</string>
    <string name="show_carrot">show carrot</string>
    <string name="last_time_you_fed">Last Time You Fed:  </string>
    <string name="date_time_of_feeding">date and time of feeding</string>
    <string name="timer">00:00:00</string>
    <string name="left">left</string>

    <!-- fragment_question.xml-->
    <string name="submit">submit</string>

    <!-- fragment_customise_quiz.xml-->
    <string name="no_of_question">Choose the number of questions:</string>
    <string name="enter_no_of_question">Enter a number (1–50)</string>
    <string name="questions_type">Choose the questions type:</string>
    <string name="questions_category">Choose the category:</string>
    <string name="questions_difficulty">Choose the difficulty:</string>
    <string name="next">Next</string>
    <string name="customise_your_quiz">Customise your quiz</string>
    <!-- spinner array-->
    <array name="questions_type_array">
        <item>Any type</item>
        <item>Multiple Choice</item>
        <item>True/False</item>
    </array>
    <array name="questions_category_array">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Televisions</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </array>
    <array name="questions_difficulties_array">
        <item>Any Difficulty</item>
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </array>

    <!--fragment_result.xml-->
    <string name="one_round_result">You gain 1 carrot and 0 marks.</string>
    <string name="total_marks">Total marks: </string>
    <string name="marks">marks</string>
    <string name="total_carrots">Total carrots: </string>
    <string name="carrots">carrots</string>
    <string name="take_another_quiz">take another quiz</string>
    <string name="take_this_quiz_again">take this quiz again</string>

    <!--fragment_setting.xml-->
    <string name="setting">Setting</string>
    <string name="music">Music:  </string>
    <string name="volume_control">Volume control:  </string>
    <string name="current_date_and_time">Current date and time:</string>
    <string name="current_date">01/12/2024</string>
    <string name="current_time">00:00</string>
    <string name="set_the_notification">Set the Notification:</string>
    <string name="button_notification">Set Notification</string>

    <!-- history_item_layout.xml-->
    <string name="category_date_time">Category - DateTime</string>
    <string name="correct">Correct: 0</string>
    <string name="wrong">Wrong: 0</string>
    <string name="total">Total: 0</string>
    <string name="type">type: Unknown</string>
    <string name="difficulty">Difficulty: Unknown</string>

    <!--nav_header.xml-->
    <string name="user_name">User Name</string>
    <string name="sample_email">user@example.com</string>

    <!--questions_item_layout.xml-->
    <string name="question_show_here">Question shows here</string>

    <!--nav_menu.xml-->
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="score">Score</string>
    <string name="check_my_history">Check my history</string>
    <string name="other">Other</string>

    <!--MainPageActivity.kt-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!--option_menu.xml-->
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>

    <string name="register_while_logged_in">you register successfully</string>
    <string name="not_logged_in">you are fail to login.</string>
    <string name="logged_in">You are logged in successfully as %s.</string>




</resources>