<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"
            />

        <item
            android:id="@+id/nav_quiz"
            android:title="@string/quiz"
            android:icon="@drawable/quiz1"
            />
    </group>

    <item android:title="@string/score">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_history"
                    android:title="@string/check_my_history"
                    android:icon="@drawable/history" />
            </group>
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:title="@string/setting"
                    android:icon="@drawable/setting" />
            </group>
        </menu>
    </item>
</menu>