<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/carrot"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TitleTextStyle"
        android:text="@string/Become_a_member" />

    <EditText
        android:id="@+id/create_name"
        style="@style/EditText"
        android:hint="@string/Type_your_full_name"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/create_email"
        style="@style/EditText"
        android:hint="@string/Type_your_email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/PasswordLayoutStyle"
        android:hint="@string/Type_your_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignUpTypePassword"
            style="@style/PasswordEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/PasswordLayoutStyle"
        android:hint="@string/Confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignUpConfirmPassword"
            style="@style/PasswordEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_button"
        style="@style/Button"
        android:layout_marginTop="5dp"
        android:text="@string/create_an_account"
        app:icon="@drawable/signup_photo" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Already_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_In"
            android:textColor="@color/yellow"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
