<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/signup_background"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".LoginActivity">

    <TextView
        style="@style/TitleTextStyle"
        android:text="@string/daily_quiz" />

    <EditText
        android:id="@+id/type_email"
        style="@style/EditText"
        android:layout_marginTop="53dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/PasswordLayoutStyle"
        android:hint="@string/Confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/type_password"
            style="@style/PasswordEditText" />
    </com.google.android.material.textfield.TextInputLayout>


<Button
        android:id="@+id/login_button"
        style="@style/Button"
        android:text="@string/LOGIN" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Do_not_have"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/yellow"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
