<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/general_bkg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/CustomisedQuizTitleTextView"
            android:text="@string/no_of_question" />

        <EditText
            android:id="@+id/editText_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/orange"
            android:hint="@string/enter_no_of_question"
            android:importantForAutofill="no"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/navy"
            android:textSize="18sp" />

        <TextView
            style="@style/CustomisedQuizTitleTextView"
            android:text="@string/questions_type" />

        <LinearLayout
            style="@style/SpinnerLinearLayout">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="style/Spinner"
                android:backgroundTint="@color/orange"
                android:entries="@array/questions_type_array" />
        </LinearLayout>

        <TextView
            style="@style/CustomisedQuizTitleTextView"
            android:text="@string/questions_category" />

        <LinearLayout
            style="@style/SpinnerLinearLayout">

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="style/Spinner"
                android:backgroundTint="@color/orange"
                android:entries="@array/questions_category_array" />
        </LinearLayout>

        <TextView
            style="@style/CustomisedQuizTitleTextView"
            android:text="@string/questions_difficulty" />

        <LinearLayout
            style="@style/SpinnerLinearLayout">

            <Spinner
                android:id="@+id/spinner4"
                style="style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/orange"
                android:entries="@array/questions_difficulties_array" />
        </LinearLayout>

        <Button
            android:id="@+id/next_button"
            style="@style/Button"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/next"/>

    </LinearLayout>


</RelativeLayout>