<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="258dp"
            android:layout_height="279dp"
            android:background="@drawable/search_bkg2"
            android:src="@drawable/cry"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="65dp" />

        <ImageView
            android:id="@+id/carrot_image"
            android:layout_width="62dp"
            android:layout_height="67dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="423dp"
            android:layout_marginEnd="333dp"
            android:layout_marginBottom="241dp"
            android:src="@drawable/carrot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/carrot_image"
            android:layout_marginStart="46dp"
            android:layout_marginTop="401dp"
            android:layout_marginEnd="279dp"
            android:layout_marginBottom="308dp"
            android:layout_toEndOf="@id/carrot_image"
            android:text="@string/total_carrot"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/feed_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="269dp"
            android:layout_marginTop="423dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="260dp"
            android:text="@string/feed"
            android:textColor="@color/white"
            app:icon="@drawable/carrot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/startQuiz_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="636dp"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="47dp"
            android:text="@string/start_quiz"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>